Property change to Modern Objective-C
Squashed commit of the following:

commit f595e586e6a94006665efad11fd0232d38b03ac0
Author: kkgn06 <k.kennichi.knlnshnm@gmail.com>
Date:   Fri May 10 01:23:42 2013 +0900

    _globalRootIndexPathを廃止してpropertyを介してアクセスするようにした

commit 7c08145a40a6151720d7e551b0459a566d9d1223
Author: kkgn06 <k.kennichi.knlnshnm@gmail.com>
Date:   Thu May 9 21:55:00 2013 +0900

    _rootIndexPathを廃止してpropertyのindexPathを使用

commit 57afcb3025684a62658b1590618c53dfd5730161
Author: kkgn06 <k.kennichi.knlnshnm@gmail.com>
Date:   Thu May 9 21:10:04 2013 +0900

    expandのgetはpropertyを介して行う

commit 29a91914922cb044d19b8697c8f1597a4e353014
Author: kkgn06 <k.kennichi.knlnshnm@gmail.com>
Date:   Thu May 9 21:01:27 2013 +0900

    delegateも

commit 6cce6def413204e4f0deaa15da0f5989b06b95df
Author: kkgn06 <k.kennichi.knlnshnm@gmail.com>
Date:   Thu May 9 20:58:47 2013 +0900

    tableViewも

commit d49d86802a4fb17a3561e1729debb219e9ac415c
Author: kkgn06 <k.kennichi.knlnshnm@gmail.com>
Date:   Thu May 9 20:56:55 2013 +0900

    titleも

commit 9e8f9a49ad5baa42f1d5bad434a2bcc2fe7209df
Author: kkgn06 <k.kennichi.knlnshnm@gmail.com>
Date:   Thu May 9 20:53:56 2013 +0900

    gitignoreに.idea追加

commit 35720fafd805331d1e3c8f68512b566eb9f71598
Author: kkgn06 <k.kennichi.knlnshnm@gmail.com>
Date:   Thu May 9 20:53:12 2013 +0900

    実装ファイル内でもelementsにpropertyを介してアクセスする

commit 8050763bda33d774c91956ba3728c1bc7e7bdd2b
Author: kkgn06 <k.kennichi.knlnshnm@gmail.com>
Date:   Thu May 9 20:48:45 2013 +0900

    実装ファイル内でもtypeはpropertyを使ってアクセスするように変更

commit 2399362b5650b044b70e2578ef0e0d3cab3f019f
Author: kkgn06 <k.kennichi.knlnshnm@gmail.com>
Date:   Thu May 9 20:25:33 2013 +0900

    不要な変数宣言、synthesizeを除去

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,4 @@ VPPDropDownExample.xcodeproj/project.xcworkspace/xcuserdata/
 build/
 VPPDropDownExample.xcodeproj/*.mode1v3
 VPPDropDownExample.xcodeproj/*.pbxuser
-
+.idea/
