--- a/VPPDropDownExample/KKDropDownExample-Info.plist
+++ b/VPPDropDownExample/KKDropDownExample-Info.plist
@@ -11,7 +11,7 @@
 	<key>CFBundleIconFiles</key>
 	<array/>
 	<key>CFBundleIdentifier</key>
-	<string>es.victorpena.${PRODUCT_NAME:rfc1034identifier}</string>
+	<string>me.gin0606.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
